<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_choice_3">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/U"
                android:id="@+id/View1"
                android:layout_column="2"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/E"
                android:id="@+id/View5"
                android:layout_column="5"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/U"
                android:id="@+id/View8"
                android:layout_column="8"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/L"
                android:id="@+id/View4"
                android:layout_column="1"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/R"
                android:id="@+id/View2"
                android:layout_column="3"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView2"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/Q"
                android:id="@+id/View6"
                android:layout_column="5"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView3"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/L"
                android:id="@+id/View11"
                android:layout_column="7"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/R"
                android:id="@+id/View9"
                android:layout_column="9"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/D"
                android:id="@+id/View3"
                android:layout_column="2"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/S"
                android:id="@+id/View7"
                android:layout_column="5"/>

            <ru.spbau.mit.androidcontroller.controller.MyButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/D"
                android:id="@+id/View10"
                android:layout_column="8"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>