<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/id_choice_6">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView8"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/A"
            android:id="@+id/button"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView7"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/W"
            android:id="@+id/button2"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView6"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/S"
            android:id="@+id/button3"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView4"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/D"
            android:id="@+id/button4"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView5"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView9" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Q"
            android:id="@+id/button5"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/E"
            android:id="@+id/button6"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/space"
            android:id="@+id/button7"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView10" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView11"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/left"
            android:id="@+id/button8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView12"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/up"
            android:id="@+id/button9"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView13"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/down"
            android:id="@+id/button10"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView14"
            android:layout_weight="1" />

        <ru.spbau.mit.androidcontroller.controller.MyButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/right"
            android:id="@+id/button11"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/textView15"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>